# tiny-crcv-lab

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.github/workflows/: pages.yml
data/: fresh_qa_600.jsonl  fresh_qa_600_manifest.json  halueval_qa_50.jsonl  questions.jsonl
experiments/: fresh_qa_600_extension_protocol.json  fresh_qa_600_protocol.json  fresh_qa_600_smollm2_replication_protocol.json  halueval_qa_50_protocol.json
outputs/: fresh_qa_cross_model_replication.json  fresh_qa_cross_model_replication.md  shallow_tree_results.json  simple_metric_search.json
outputs/fresh_qa_qwen05b_base/: extension_report.md  fast_baseline_artifacts.json  hidden_probe.npz  metadata.json  metrics.json  report.md
outputs/fresh_qa_qwen05b_instruct/: extension_report.md  hidden_probe.npz  (+4 more)
scripts/: check_browser_generation.mjs  evaluate_cross_model_replication.py  evaluate_fast_baselines.py  evaluate_shallow_trees.py  export_question_tokens.mjs  expose_onnx_hidden_state.py  fetch_fresh_qa.py  fetch_halueval_subset.py  merge_signal_traces.py  prepare_talk_route.mjs  prepare_web_data.mjs  rescore_saved.py  run_halueval_subset.py  run_sota_comparison.py  search_simple_metrics.py
talk/: README.md  open-slide.config.ts  package-lock.json  package.json
tests/: test_core.py  test_data.py  test_external_outputs.py  test_fast_baselines.py  test_fresh_comparison_outputs.py  test_probe.py  test_saved_outputs.py  test_tree.py
web/: App.tsx  FreshEvidence.tsx  inference.worker.ts  styles.css  types.ts
(+38 files in other folders)
