[project]
name = "tiny-crcv"
version = "0.1.0"
description = "A tiny, auditable CRCV hallucination-detection experiment"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=2.0,<3",
  "safetensors>=0.4,<1",
  "torch>=2.5,<3",
  "transformers>=4.48,<5",
]

[project.optional-dependencies]
dev = ["onnx>=1.18,<2", "pytest>=8,<10"]

[project.scripts]
tiny-crcv = "tiny_crcv.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_crcv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
